squashing bugs

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,6 +30,6 @@ html {
 
 
 ::-webkit-scrollbar-track {
-  background-color: #5a5a5a;
+  background-color: #5A5A5A;
 }
 
